// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard regression net > Functional: empty / near-empty summary > renders the dashboard shell and hides all optional sections > empty-summary-structure 1`] = `
"main.relative
  section.container.grid-gap-2xl
    div.dashboard-header
      div
        h2.dashboard-title
      div.export-controls.export-hide
        div.switch-row
          div.export-dropdown
            span.inline-flex[role=button]
          label.switch
            input
            span.slider
        button.btn.ghost
        button.btn.ghost
        button.btn.ghost
    div.card.grid-gap-md
      div.tag
      h3.card-header
      div.chart-container-xl.chart-full-width[role=img]
        div[testid=responsive-container]
          div[testid=area-chart]
            defs
              lineargradient#timelineGradient
                stop
                stop
            div[testid=area]
      div.text-muted.text-xs
    div.card.grid-gap-md
      div.tag
      h3.card-header
      div.stats-table-wrapper
        table.stats-table
          thead
            tr
              th
              th
              th
              th
              th
              th
          tbody
    div.grid.stat-grid
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
      div.card.glow-ring
        span.badge
        div
      div.card.glow-ring
        span.badge
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
    div.chart-grid.grid
      div.card
        div
          div
            div
        div.chart-container-sm[role=img]
          div[testid=responsive-container]
            div[testid=bar-chart]
              div[testid=legend]
      div.card
        div
          div
            div
            div
        div.chart-container-sm[role=img]
          div[testid=responsive-container]
            div[testid=pie-chart]
              div[testid=pie]
              div[testid=legend]
      div.card
        div
          div
            div
            div
        div.chart-container-md[role=img]
          div[testid=responsive-container]
            div[testid=bar-chart]
              div[testid=bar]
      div.card
        div
          div
            div
        div.chart-container-lg[role=img]
          div[testid=responsive-container]
            div[testid=radar-chart]
              div[testid=legend]
      div.card
        div
          div
            div
        div.chart-container-lg[role=img]
          div[testid=responsive-container]
            div[testid=radar-chart]
              div[testid=legend]
    div.grid-gap-lg
      div.card.grid-gap-sm
        div.tag
        h3.card-header
        div.text-muted
      div.card.grid-gap-sm.min-h-card
        div.tag
        h3.card-header
        div[testid=word-cloud]
      div.card.grid-gap-sm.min-h-card
        div.tag
        h3.card-header
        div[testid=emoji-cloud]"
`;

exports[`Dashboard regression net > Visual structure: full data view > matches the normalized DOM-structure and landmark snapshots > full-data-landmarks 1`] = `
"tag: Timeline
header: Chat timeline
tag: People
header: Per-person stats
tag: By person
header: Top phrases per sender
tag: Word cloud
header: Most common words
tag: Emoji cloud
header: Most used emojis
journey: Journey Through Your Messages"
`;

exports[`Dashboard regression net > Visual structure: full data view > matches the normalized DOM-structure and landmark snapshots > full-data-structure 1`] = `
"main.relative
  section.container.grid-gap-2xl
    div.dashboard-header
      div
        h2.dashboard-title
      div.export-controls.export-hide
        div.switch-row
          div.export-dropdown
            span.inline-flex[role=button]
          label.switch
            input
            span.slider
        button.btn.ghost
        button.btn.ghost
        button.btn.ghost
    div.card.grid-gap-md
      div.tag
      h3.card-header
      div.chart-container-xl.chart-full-width[role=img]
        div[testid=responsive-container]
          div[testid=area-chart]
            defs
              lineargradient#timelineGradient
                stop
                stop
            div[testid=area]
      div.text-muted.text-xs
    div.card.grid-gap-md
      div.tag
      h3.card-header
      div.stats-table-wrapper
        table.stats-table
          thead
            tr
              th
              th
              th
              th
              th
              th
          tbody
            tr
              td.font-semibold
              td
              td
              td
              td
              td
                div.emoji-grid-5.emoji-list
                  span.emoji-badge
                    span.text-muted
                  span.emoji-badge
                    span.text-muted
                  span.emoji-badge
                    span.text-muted
            tr
              td.font-semibold
              td
              td
              td
              td
              td
                div.emoji-grid-5.emoji-list
                  span.emoji-badge
                    span.text-muted
                  span.emoji-badge
                    span.text-muted
                  span.emoji-badge
                    span.text-muted
    div.grid.stat-grid
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
      div.card.glow-ring
        span.badge
        div
        div
    div.chart-grid.grid
      div.card
        div
          div
            div
        div.chart-container-sm[role=img]
          div[testid=responsive-container]
            div[testid=bar-chart]
              div[testid=bar]
              div[testid=bar]
              div[testid=legend]
      div.card
        div
          div
            div
            div
        div.chart-container-sm[role=img]
          div[testid=responsive-container]
            div[testid=pie-chart]
              div[testid=pie]
                div[testid=cell]
                div[testid=cell]
              div[testid=legend]
      div.card
        div
          div
            div
            div
        div.chart-container-md[role=img]
          div[testid=responsive-container]
            div[testid=bar-chart]
              div[testid=bar]
      div.card
        div
          div
            div
        div.chart-container-lg[role=img]
          div[testid=responsive-container]
            div[testid=radar-chart]
              div[testid=radar]
              div[testid=radar]
              div[testid=legend]
      div.card
        div
          div
            div
        div.chart-container-lg[role=img]
          div[testid=responsive-container]
            div[testid=radar-chart]
              div[testid=radar]
              div[testid=radar]
              div[testid=legend]
    div.chart-grid.grid
      div.card
        div
          div
            div
            div
        div.chart-container-md[role=img]
          div[testid=responsive-container]
            div[testid=line-chart]
              div[testid=line]
              div[testid=line]
              div[testid=legend]
      div.card
        div
          div
            div
            div
        div.chart-container-md[role=img]
          div[testid=responsive-container]
            div[testid=bar-chart]
              div[testid=bar]
              div[testid=bar]
              div[testid=bar]
              div[testid=legend]
      div.card
        div
          div
            div
            div
        div.chart-container-sm[role=img]
          div[testid=responsive-container]
            div[testid=area-chart]
              defs
                lineargradient#sentimentGradient
                  stop
                  stop
              div[testid=area]
    div.grid-gap-lg
      div.card.grid-gap-sm
        div.tag
        h3.card-header
        div.phrases-grid
          div.phrase-person-card
            div.phrase-person-header
              span.font-bold
              span.text-muted.text-xs
            div.phrase-list
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
          div.phrase-person-card
            div.phrase-person-header
              span.font-bold
              span.text-muted.text-xs
            div.phrase-list
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
              div.phrase-item
                span.font-semibold.text-muted
                span.font-semibold
                span.text-muted.text-right
      div.card.grid-gap-sm.min-h-card
        div.tag
        h3.card-header
        div[testid=word-cloud]
      div.card.grid-gap-sm.min-h-card
        div.tag
        h3.card-header
        div[testid=emoji-cloud]
    div.card.journey-section
      h2.journey-title
      div.journey-highlights
        div.flex-col-end
          div.journey-highlight-value.text-primary
          div.journey-highlight-label
        div.flex-col-end
          div.journey-highlight-value.text-accent
          div.journey-highlight-label
        div.flex-col-end
          div.journey-highlight-value.nowrap
          div.journey-highlight-label
        div.flex-col-end
          div.journey-highlight-value.nowrap
          div.journey-highlight-label
      div.journey-subsection
        h3.journey-subsection-title
        p.journey-subsection-desc
        div.journey-moment-card
          div
            div.flex-center.mb-sm
              div
                div.journey-message-sender
                div.journey-message-text
                div.journey-message-meta.text-right
            div.flex-center.justify-end.mb-sm
              div
                div.journey-message-sender
                div.journey-message-text
                div.journey-message-meta.text-right
      div.journey-subsection
        h3.journey-moments-title
        div.grid-gap-xl
          div.journey-moment-card
            div.journey-moment-header
              div.journey-moment-title
              div.journey-moment-desc
            div
              div.flex-center.mb-sm
                div
                  div.journey-message-sender
                  div.journey-message-text
                  div.journey-message-meta.text-right
              div.flex-center.justify-end.mb-sm
                div
                  div.journey-message-sender
                  div.journey-message-text
                  div.journey-message-meta.text-right
      div.journey-subsection
        h3.journey-subsection-title
        p.journey-subsection-desc
        div.journey-moment-card
          div
            div.flex-center.justify-end.mb-sm
              div
                div.journey-message-sender
                div.journey-message-text
                div.journey-message-meta.text-right
            div.flex-center.mb-sm
              div
                div.journey-message-sender
                div.journey-message-text
                div.journey-message-meta.text-right"
`;

exports[`Dashboard regression net > Visual structure: pre-render upload state > matches the structural snapshot of the upload (no-data) view > upload-view-structure 1`] = `
"main.relative
  section.container.grid-gap-2xl
    div.dashboard-header
      div
        h2.dashboard-title
        p.dashboard-subtitle
    div#upload.card.upload-card
      h3.card-header
      p.m-0.text-muted
      div.upload-form
        div.upload-dropzone[role=region]
          div.file-picker
            label.btn.upload-btn
              input.file-input
            span.file-info
        details.instructions-toggle
          summary.text-md.text-muted
          div.instructions-content
            div
              strong.d-block.mb-sm
              ol.instructions-list
                li
                li
                  strong.text-white
                li
                  strong.text-white
            div
              strong.d-block.mb-sm
              ol.instructions-list
                li
                li
                  strong.text-white
                li"
`;
